# WinUpdate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DESIGN.md  README.md  build.sh  lint.sh  toolchain-mingw64.cmake
.github/workflows/: build.yml
include/: CatUpdateCore.hpp  Cli.hpp  HttpClient.hpp  PackageManager.hpp  PlatformTraits.hpp  ProcessExecutor.hpp  Providers.hpp  Ui.hpp  WinUpdateCore.hpp
resources/: app.manifest  resources.rc
scripts/: ci-upload-artifacts.sh  upload-artifacts.sh
src/: CatUpdateCore.cpp  HttpClient.cpp  PackageManager.cpp  PlatformTraits.cpp  ProcessExecutor.cpp  Providers.cpp  WinUpdateCore.cpp  cli_main.cpp  gui_main.cpp  main.cpp
src/posix/: CatUpdateCorePosix.cpp  HttpClientPosix.cpp  PlatformTraitsPosix.cpp  ProcessExecutorPosix.cpp
src/win32/: CatUpdateCoreWin32.cpp  HttpClientWin32.cpp  PlatformTraitsWin32.cpp  ProcessExecutorWin32.cpp
tests/: test_core.cpp  test_helper.hpp  test_main.cpp  test_providers.cpp
